feat(l10n): Add lyric quality preference category
在歌词设置中添加了一个新的“基础”类别。
这包括在`strings.xml`和`values-zh-rCN/strings.xml`中添加新的字符串资源，以及更新`settings_lyric.xml`布局文件以包含新的偏好设置类别。

Signed-off-by: ghhccghk <2137610394@qq.com>

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -270,5 +270,6 @@
     <string name="reset">重置</string>
     <string name="settings_image_cache_size_title">图片缓存大小 (MB)</string>
     <string name="pitch">音调</string>
+    <string name="preference_lyric_quality">基础</string>
 
 </resources>
