--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">musicplay</string>
+    <string name="app_name">Record Echoes</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_user">User</string>
@@ -352,7 +352,7 @@
     <string name="tempo_pitch_value" translatable="false">%s: %.2fx</string>
     <string name="lock_tempo_pitch">Lock tempo and pitch</string>
     <string name="reset">Reset</string>
-    <string name="preference_lyric_quality">基础</string>
+    <string name="preference_lyric_quality">Base</string>
 
 
 </resources>
